fixed images on mobile hackathon site

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -277,8 +277,9 @@
 ================================================== */
 
 	img.scale-with-grid {
-		max-width: 100%;
-		height: auto; }
+		width: 100%;
+		height: auto; 
+	}
 
 	img.banner-img {
 		width: 100%;
